--- a/.env
+++ b/.env
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=planner_app
+DB_HOST=yamabiko.proxy.rlwy.net
+DB_PORT=20164
+DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=oaKlUJMRlTWxyJKyADDDMlrLjRBkmoun
 
 TODOIST_API_KEY=9ecbf63418fe80e18b3b34805e2c5d684bf29755
 OPENWEATHERMAP_API_KEY=5abcb3369c2f29ec1ed3d101358767e7
