--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:kxJCckuYOBVx8UpNLwYPyJyHfEci6kvbUr4iQMx98Ho=
 APP_DEBUG=false
-APP_URL=http://localhost
+APP_URL=https://planit-f3pr.onrender.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
