--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=production
 APP_KEY=base64:kxJCckuYOBVx8UpNLwYPyJyHfEci6kvbUr4iQMx98Ho=
 APP_DEBUG=false
 APP_URL=https://planit-f3pr.onrender.com
+VITE_APP_URL=https://planit-f3pr.onrender.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
