--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ APP_KEY=base64:kxJCckuYOBVx8UpNLwYPyJyHfEci6kvbUr4iQMx98Ho=
 APP_DEBUG=false
 APP_URL=https://planit-f3pr.onrender.com
 VITE_APP_URL=https://planit-f3pr.onrender.com
+ASSET_URL=https://planit-f3pr.onrender.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
