--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:kxJCckuYOBVx8UpNLwYPyJyHfEci6kvbUr4iQMx98Ho=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://planit-f3pr.onrender.com
 VITE_APP_URL=https://planit-f3pr.onrender.com
 ASSET_URL=https://planit-f3pr.onrender.com
