--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:kxJCckuYOBVx8UpNLwYPyJyHfEci6kvbUr4iQMx98Ho=
 APP_DEBUG=true
 APP_URL=https://planit-f3pr.onrender.com
